# crusty-keys

./: .luarc.json  Cargo.toml  README.md  config.lua  global.lua  i3.lua
examples/: util.lua
src/: config.rs  error.rs  logger.rs  macros.rs  main.rs  x11_kb.rs
src/key_maps/: kbcode.rs  mod.rs
src/lua/: functions.rs  mod.rs
