[package]
name = "crusty-keys"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
opt = "s"


[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
mlua = { version = "0.11.1", features = ["lua54","macros", "serialize", "vendored" ] }
i3ipc = "0.10.1"
x11-dl = "2.21.0"
regex = "1.11.3"

